<resources>
    <string name="app_name">MovieZ</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="rating">Rating</string>
    <string name="imdb_rating">IMDb</string>
    <string name="metaScore">MetaScore</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="title_activity_photo">PhotoActivity</string>

    <string name="version">Version</string>
    <string name="licence">Licence</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_description">Help me to improve MovieZ</string>
    <string name="rate">Rate</string>
    <string name="share">Share this app</string>
    <string name="rate_description">If you like this app, please give us five star</string>

    <string name="sendto">mailto:wartechwick@gmail.com</string>
    <string name="mail_topic">MovieZ Feedback / Advice</string>

    <string name="error_title_damn">Something went wrong !</string>
    <string name="error_details">Unable to fetch movies.\nCheck internet connection then try again.</string>
    <string name="error_retry">RETRY</string>
</resources>
