<FrameLayout android:id="@+id/all_details_container"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f5f5f5"
             tools:context=".fragments.MovieDetailActivityFragment"
             tools:showIn="@layout/activity_movie_detail">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/dark"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:scaleType="centerCrop"/>

            <FrameLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/backdrop"
                android:background="@color/primaryColor"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground">

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceLarge"/>

                    <TextView
                        android:id="@+id/detail_tagline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/detail_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceSmall"/>


                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/header_container"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/trailorBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout android:id="@+id/score_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:layout_weight="3"
                        >
                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_gravity="center"
                            android:text="@string/rating"
                            android:visibility="gone"
                            android:textAppearance="?android:textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/detail_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-condensed"
                            android:visibility="gone"
                            android:textAppearance="?android:textAppearanceLarge"/>

                        <LinearLayout
                            android:id="@+id/imdb_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="gone"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/tv_imdb_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_gravity="center"
                                android:text="@string/imdb_rating"
                                android:textAppearance="?android:textAppearanceLarge"/>

                            <TextView
                                android:id="@+id/detail_imdb_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="sans-serif-condensed"
                                android:textAppearance="?android:textAppearanceLarge"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/meta_layout"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:visibility="gone"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/tv_meta_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/metaScore"
                                android:layout_gravity="center"
                                android:textAppearance="?android:textAppearanceLarge"/>

                            <TextView
                                android:id="@+id/detail_meta_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_gravity="center"
                                android:textAppearance="?android:textAppearanceLarge"/>
                        </LinearLayout>

                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/trailorView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground">


                        <ImageView
                            android:id="@+id/detail_youtube"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"/>


                        <ImageView
                            android:id="@+id/play_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:alpha="0.8"
                            android:background="@drawable/ic_play_circle_filled_white_48dp"
                            android:visibility="invisible"/>

                    </FrameLayout>

                </LinearLayout>

                <include layout="@layout/extra_info_movie_detail"/>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <tr.xip.errorview.ErrorView
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:ev_retryButtonText="TRY AGAIN"
        app:ev_retryButtonTextColor="@color/colorAccent"
        app:ev_subtitle="Something went wrong!" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_margin"
        android:background="#00ffffff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
</FrameLayout>
